--- a/index.html
+++ b/index.html
@@ -24,8 +24,57 @@
 		<header>
 			<div class="wrapper-links">
 				<img src="images/logo.svg" alt="" class="logo" />
-				<a href="#" class="link">Features</a>
-				<a href="#" class="link">Company</a>
+				<div class="dropdown">
+					<a href="#" class="link">
+						Features
+						<img
+							src="images/icon-arrow-down.svg"
+							class="dropdown-icon"
+							alt=""
+						/>
+					</a>
+					<div class="dropdown-menu">
+						<a href="#" class="link">
+							<img src="images/icon-todo.svg" class="dropdown-icon" alt="" />
+							Todo List
+						</a>
+						<a href="#" class="link">
+							<img
+								src="images/icon-calendar.svg"
+								class="dropdown-icon"
+								alt=""
+							/>
+							Calendar
+						</a>
+						<a href="#" class="link">
+							<img
+								src="images/icon-reminders.svg"
+								class="dropdown-icon"
+								alt=""
+							/>
+							Reminders
+						</a>
+						<a href="#" class="link">
+							<img
+								src="images/icon-planning.svg"
+								class="dropdown-icon"
+								alt=""
+							/>
+							Planning
+						</a>
+					</div>
+				</div>
+				<div class="dropdown">
+					<a href="#" class="link">
+						Company
+						<img src="images/icon-arrow-down.svg" alt="" />
+					</a>
+					<div class="dropdown-menu">
+						<a href="#" class="link">History</a>
+						<a href="#" class="link">Our Team</a>
+						<a href="#" class="link">Blog</a>
+					</div>
+				</div>
 				<a href="#" class="link">Careers</a>
 				<a href="#" class="link">About</a>
 			</div>
@@ -37,7 +86,6 @@
 		</header>
 
 		<main>
-
 			<div class="cta-text">
 				<h1 class="header-1">Make remote work</h1>
 				<p class="cta-desc">
@@ -59,15 +107,14 @@
 
 			<div class="cta-img">
 				<picture class="animation-hidden">
-					<!-- below 400px -->
+					<!-- BELOW 1050 PX -->
 					<source
-						media="(max-width: 26.5625em)"
+						media="(max-width: 65.625em)"
 						srcset="images/image-hero-mobile.png"
 					/>
 					<img src="images/image-hero-desktop.png" alt="" />
 				</picture>
 			</div>
-			
 		</main>
 
 		<!-- 
@@ -77,5 +124,7 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div> -->
+
+		<script defer src="js/script.js"></script>
 	</body>
 </html>
