mobile version done

--- a/index.html
+++ b/index.html
@@ -22,67 +22,78 @@
 	</head>
 	<body>
 		<header>
-			<div class="wrapper-links">
-				<img src="images/logo.svg" alt="" class="logo" />
-				<div class="dropdown">
-					<a href="#" class="link">
-						Features
-						<img
-							src="images/icon-arrow-down.svg"
-							class="dropdown-icon"
-							alt=""
-						/>
-					</a>
-					<div class="dropdown-menu">
-						<a href="#" class="link">
-							<img src="images/icon-todo.svg" class="dropdown-icon" alt="" />
-							Todo List
-						</a>
-						<a href="#" class="link">
-							<img
-								src="images/icon-calendar.svg"
-								class="dropdown-icon"
-								alt=""
-							/>
-							Calendar
-						</a>
-						<a href="#" class="link">
-							<img
-								src="images/icon-reminders.svg"
-								class="dropdown-icon"
-								alt=""
-							/>
-							Reminders
-						</a>
-						<a href="#" class="link">
-							<img
-								src="images/icon-planning.svg"
-								class="dropdown-icon"
-								alt=""
-							/>
-							Planning
-						</a>
-					</div>
-				</div>
-				<div class="dropdown">
-					<a href="#" class="link">
-						Company
-						<img src="images/icon-arrow-down.svg" alt="" />
-					</a>
-					<div class="dropdown-menu">
-						<a href="#" class="link">History</a>
-						<a href="#" class="link">Our Team</a>
-						<a href="#" class="link">Blog</a>
-					</div>
-				</div>
-				<a href="#" class="link">Careers</a>
-				<a href="#" class="link">About</a>
-			</div>
+			<img src="images/logo.svg" alt="" class="logo" />
 
-			<div class="wrapper-account">
-				<a href="#" class="link">Login</a>
-				<a href="#" class="link link--rounded">Register</a>
+			<div class="mobile-menu mobile-menu--hidden">
+				<div class="wrapper-links">
+					<div class="dropdown">
+						<a href="#" class="link">
+							Features
+							<img
+								src="images/icon-arrow-down.svg"
+								class="dropdown-icon"
+								alt=""
+							/>
+						</a>
+						<div class="dropdown-menu">
+							<a href="#" class="link">
+								<img src="images/icon-todo.svg" class="dropdown-icon" alt="" />
+								Todo List
+							</a>
+							<a href="#" class="link">
+								<img
+									src="images/icon-calendar.svg"
+									class="dropdown-icon"
+									alt=""
+								/>
+								Calendar
+							</a>
+							<a href="#" class="link">
+								<img
+									src="images/icon-reminders.svg"
+									class="dropdown-icon"
+									alt=""
+								/>
+								Reminders
+							</a>
+							<a href="#" class="link">
+								<img
+									src="images/icon-planning.svg"
+									class="dropdown-icon"
+									alt=""
+								/>
+								Planning
+							</a>
+						</div>
+					</div>
+					<div class="dropdown">
+						<a href="#" class="link">
+							Company
+							<img src="images/icon-arrow-down.svg" alt="" />
+						</a>
+						<div class="dropdown-menu">
+							<a href="#" class="link">History</a>
+							<a href="#" class="link">Our Team</a>
+							<a href="#" class="link">Blog</a>
+						</div>
+					</div>
+					<a href="#" class="link">Careers</a>
+					<a href="#" class="link">About</a>
+				</div>
+
+				<div class="wrapper-account">
+					<a href="#" class="link">Login</a>
+					<a href="#" class="link link--rounded">Register</a>
+				</div>
 			</div>
+			<button class="btn-menu">
+				<img src="images/icon-menu.svg" class="icon-menu-open" alt="" />
+				<img
+					src="images/icon-close-menu.svg"
+					class="icon-menu-close hidden"
+					alt=""
+				/>
+			</button>
 		</header>
 
 		<main>
